--- a/3_AvancandoNoReact/sessao_tres/src/App.css
+++ b/3_AvancandoNoReact/sessao_tres/src/App.css
@@ -3,6 +3,7 @@
     border-color: black;
     margin-bottom: 1500px;
     text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 img{
